WRP-2488 major update on feedback list: made a button to toggle concepts with feedback vs view all for both views. corrected issues relating to messages for not showing for oth views

--- a/app/styles/button.scss
+++ b/app/styles/button.scss
@@ -223,3 +223,26 @@ button.fsn-title-button{width:100%;}
     background-color: grey;
   
   }
+  
+  
+  .btn-default.blue:hover,
+.btn-default.blue:active {
+  background-color: #097fda;
+  color: #fff;
+}
+
+  .btn-default.green.base:hover,
+.btn-default.green.base:active {
+  background-color: #388E3C;
+  color: #fff;
+}
+  .btn-default.indigo.lighten-2:hover,
+.btn-default.indigo.lighten-2:active {
+  background-color: #3f51b5;
+  color: #fff;
+}
+  .btn-default.pink.lighten-2:hover,
+.btn-default.pink.lighten-2:active {
+  background-color: #e91e63;
+  color: #fff;
+}
