--- a/app/styles/edit.scss
+++ b/app/styles/edit.scss
@@ -722,11 +722,6 @@ sca-column
   background-color: #424242;
 }
 
-.btn-default.blue:hover,
-.btn-default.blue:active {
-  background-color: #097fda;
-  color: #fff;
-}
 
 .search-snomed {
   width: 90%;
