--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -33,6 +33,7 @@ html {
 	font-weight:500;
 	
 }
+.m-r-2{margin-righ:2px;}
 .promoted-check-box{font-family: Roboto, sans-serif!important; color:#666!important}
 .table-full thead tr > th {font-size:11px;}
 .classification-header .btn[disabled],
